# python-trainee-assignment

./: pyproject.toml
python_trainee_assignment/: traverse_matrix.py
tests/: test_traverse_matrix.py
